--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </header>
 
 <body>
-    <canvas id="output" width="400" height="220"></canvas>
+    <canvas id="output" width="340" height="220"></canvas>
 
 
 
     <img style="display:none" id="station" src="https://www.clipartwiki.com/clipimg/full/356-3565858_pixel-art-space-station-transparent.png" />
     <img style="display:none" id="shipplayer" src="https://opengameart.org/sites/default/files/spaceship4.png" />
 
-    <img style="display:none" id="skyDown" src="https://owips.com/sites/default/files/clipart/starry-sky-clipart/179303/starry-sky-clipart-pixel-art-179303-9701591.jpg">
+    <img style="display:none" id="skyDown" src="https://i.pinimg.com/originals/24/71/8a/24718a3f394fc05569ac845adb616889.jpg">
 
     <script src="mode7Algorithm.js"></script>
     <script>
