--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <h1>Snes Mode 7 Engine</h1>
-    <p>Warship Defender</p>
+    <p>Warship Defender [Developing]</p>
 </header>
 
 <body>
