--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <h1>Snes Mode 7 Engine</h1>
-    <p>Warship Defender [Developing]</p>
+    <p>Warship Defender</p>
+
 </header>
 
-<body>
+<body id="body">
     <canvas id="output" width="340" height="220"></canvas>
 
 
-
+    <img style="display:none" id="shipfire" src="https://art.pixilart.com/thumb/02c3648e0c68599.png">
     <img style="display:none" id="station" src="https://www.clipartwiki.com/clipimg/full/356-3565858_pixel-art-space-station-transparent.png" />
     <img style="display:none" id="shipplayer" src="https://opengameart.org/sites/default/files/spaceship4.png" />
 
@@ -30,6 +31,15 @@
         audio.play();
     </script>
 
+    <p>'Z' to shot</p>
+
+    <blockquote class="twitter-tweet">
+        <p lang="es" dir="ltr">El modo 7 es un sistema de procesamiento gráfico desarrollado por Nintendo para la consola de Super Nintendo, en la cual manipula una textura para que sea rotada y escalada, para crear una perspectiva de profundidad en una superficie 2D 🕹️🕹️🕹️🕹️
+            <a href="https://t.co/u80NunqC7f">pic.twitter.com/u80NunqC7f</a></p>&mdash; root@gabrielin-root:/home/gabrielin (@Pipo_lucido) <a href="https://twitter.com/Pipo_lucido/status/1197851706744279040?ref_src=twsrc%5Etfw">November 22, 2019</a></blockquote>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
 </body>
+
 
 </html>
