--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         audio.play();
     </script>
 
-    <p>'Z' to shot</p>
+    <p>'Z' or 'tap' to fire</p>
 
     <blockquote class="twitter-tweet">
         <p lang="es" dir="ltr">El modo 7 es un sistema de procesamiento gráfico desarrollado por Nintendo para la consola de Super Nintendo, en la cual manipula una textura para que sea rotada y escalada, para crear una perspectiva de profundidad en una superficie 2D 🕹️🕹️🕹️🕹️
